--- a/sick-fits/backend/package.json
+++ b/sick-fits/backend/package.json
@@ -6,7 +6,9 @@
     "start": "nodemon -e js,graphql -x node src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
     "test": "jest",
-    "deploy": "prisma deploy --env-file variables.env"
+    "deploy": "prisma deploy --env-file variables.env",
+    "lint": "eslint \"**/*.js\"",
+    "format": "prettier --write \"**/*.js\""
   },
   "dependencies": {
     "babel-preset-env": "^1.7.0",
@@ -31,6 +33,20 @@
   "babel": {
     "presets": [
       "env"
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^5.7.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "husky": "^1.1.2",
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.14.3"
+  },
+  "lint-staged": {
+    "*.js": [
+      "yarn format",
+      "git add"
     ]
   }
 }
