--- a/sick-fits/frontend/package.json
+++ b/sick-fits/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "next build",
     "start": "next start",
     "test": "NODE_ENV=test jest --watch",
-    "heroku-postbuild": "next build"
+    "heroku-postbuild": "next build",
+    "lint": "eslint \"**/*.js\"",
+    "format": "prettier --write \"**/*.js\""
   },
   "author": "",
   "license": "ISC",
@@ -42,9 +44,16 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "casual": "^1.5.19",
     "enzyme-to-json": "^3.3.4",
+    "eslint": "^5.7.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "graphql-tools": "^4.0.0",
+    "husky": "^1.1.2",
     "jest": "^23.6.0",
-    "jest-transform-graphql": "^2.1.0"
+    "jest-transform-graphql": "^2.1.0",
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.14.3"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/jest.setup.js",
