--- a/sick-fits/frontend/package.json
+++ b/sick-fits/frontend/package.json
@@ -66,7 +66,12 @@
       ".*": "babel-jest"
     }
   },
-  "//": "This is our babel config, I prefer this over a .babelrc file",
+  "lint-staged": {
+    "*.js": [
+      "yarn format",
+      "git add"
+    ]
+  },
   "babel": {
     "env": {
       "development": {
